fix checkmate errors and apply styling

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,8 +52,8 @@ Imports:
     biomaRt,
     Biobase,
     BiocGenerics,
+    checkmate (>= 2.1),
     circlize,
-    checkmate,
     ComplexHeatmap,
     DESeq2,
     dplyr,
