--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,9 @@ design/*.html
 .Rproj.user
 
 coverage.*
+
+tests/testthat/junit-result.xml
+
+tests/testthat/Rplots.pdf
+
+tests/testthat/testthat-problems.rds
