--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,3 @@
-Type: Package
 Package: hermes
 Title: Preprocessing, analyzing, and reporting of RNA-seq data
 Type: Package
@@ -12,6 +11,7 @@ Authors@R: c(
     person("Haocheng", "Li", role = "aut"),
     person("Jeff", "Luong", role = "aut"),
     person("Lyndsee", "Midori Zhang", email = "zhang.lyndsee@gene.com", role = "aut"),
+    person("Alex", "Richardson", role = "aut"),
     person("Simona", "Rossomanno", role = "aut"),
     person("Tim", "Treis", role = "aut"),
     person("Mark", "Yan", role = "aut"),
