--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: hermes
 Title: Preprocessing, analyzing, and reporting of RNA-seq data
 Type: Package
-Date: 2024-01-19
-Version: 1.8.0
+Date: 2024-06-27
+Version: 1.8.1
 Authors@R: c(
-    person("Daniel", "Sabanés Bové", email = "daniel.sabanes_bove@roche.com", role = c("aut", "cre")),
+    person("Daniel", "Sabanés Bové", email = "daniel.sabanes_bove@rconis.com", role = c("aut", "cre")),
     person("Namrata", "Bhatia", role = "aut"),
     person("Stefanie", "Bienert", role = "aut"),
     person("Benoit", "Falquet", role = "aut"),
